--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </head>
 <body>
     <header>
-        <h1>Your Name</h1>
+        <h1>Rodrigo de la Cruz</h1>
         <p>Welcome to my personal website!</p>
         <nav>
             <a href="#about">About</a>
@@ -63,7 +63,7 @@
     <div class="container">
         <section id="about">
             <h2>About Me</h2>
-            <p>Write a short introduction about yourself here.</p>
+            <p>I am a PhD student at Universidad de Guanajuato.</p>
         </section>
 
         <section id="projects">
@@ -79,7 +79,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 Your Name. All Rights Reserved.</p>
+        <p>&copy; 2025 Rodrigo de la Cruz. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
