desi test0 version

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         <section id="projects">
             <h2>Projects</h2>
-            <p>Showcase your work or list some of your key achievements here.</p>
+            <p>I am a member of the Dark Energy Spectroscopic Instrument (DESI) experiment.</p>
         </section>
 
         <section id="contact">
