desi test1 version

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="container">
         <section id="about">
             <h2>About Me</h2>
-            <p>I am a PhD student at Universidad de Guanajuato.</p>
+            <p>I am a PhD student at Universidad de Guanajuato. I work in measure the 1D LyA forest bispectrum</p>
         </section>
 
         <section id="projects">
